public/css/diy-icons.css
@font-face {
    font-family: "diy-icon";
    src: url("../fonts/diy-icon.eot?d5aa8160778fb0dd7dc1f3564a0c9105?#iefix") format("embedded-opentype"),
url("../fonts/diy-icon.woff2?d5aa8160778fb0dd7dc1f3564a0c9105") format("woff2"),
url("../fonts/diy-icon.woff?d5aa8160778fb0dd7dc1f3564a0c9105") format("woff"),
url("../fonts/diy-icon.ttf?d5aa8160778fb0dd7dc1f3564a0c9105") format("truetype"),
url("../fonts/diy-icon.svg?d5aa8160778fb0dd7dc1f3564a0c9105#diy-icon") format("svg");
}

i[class^="diy-icon-"]:before, i[class*=" diy-icon-"]:before {
    font-family: diy-icon !important;
    font-style: normal;
    font-weight: normal !important;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.diy-icon-business-center:before {
    content: "\f101";
}
.diy-icon-car:before {
    content: "\f102";
}
.diy-icon-color-lens:before {
    content: "\f103";
}
.diy-icon-event-available:before {
    content: "\f104";
}
.diy-icon-facebook:before {
    content: "\f105";
}
.diy-icon-local-pay:before {
    content: "\f106";
}
.diy-icon-pinterest:before {
    content: "\f107";
}
.diy-icon-question-answer:before {
    content: "\f108";
}
.diy-icon-star:before {
    content: "\f109";
}
.diy-icon-timer:before {
    content: "\f10a";
}
.diy-icon-twitter:before {
    content: "\f10b";
}

